@@ -1,2 +1,5 @@
 # BGSimulator
+
+# Add the following line to VM options
+--module-path "E:\Program Files\javafx\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml 
  
